force-app/main/default/objects/UWM_Loan_Info__c/UWM_Loan_Info__c.object-meta.xml
<CustomObject>
    <label>UWM Loan Info</label>
    <nameField>
        <label>UWM Loan Info</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UWM Loan Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>