force-app/main/default/objects/UWM_Loan_Info__c/fields/Ease_Link__c.field-meta.xml
<CustomField>
    <fullName>Ease_Link__c</fullName>
    <label>Ease Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>