force-app/main/default/objects/UWM_Loan_Info__c/fields/MostRecentPayload__c.field-meta.xml
<CustomField>
    <fullName>MostRecentPayload__c</fullName>
    <description>holds the most recent response payload</description>
    <label>MostRecentPayload</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>