force-app/main/default/objects/UWM_Loan_Info__c/fields/Outstanding_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Conditions__c</fullName>
    <label>Outstanding Conditions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>