force-app/main/default/objects/UWM_Loan_Info__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>UWM Loan Infos</relationshipLabel>
    <relationshipName>UWM_Loan_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>