force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_1003SignatureDate__c.field-meta.xml
<CustomField>
    <fullName>uwm_1003SignatureDate__c</fullName>
    <label>1003 Signature Date</label>
    <type>Date</type>
</CustomField>