force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_AppraisalWaiver__c.field-meta.xml
<CustomField>
    <fullName>uwm_AppraisalWaiver__c</fullName>
    <label>Appraisal Waiver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>