force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_AppraisedValue__c.field-meta.xml
<CustomField>
    <fullName>uwm_AppraisedValue__c</fullName>
    <label>Appraised Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>