force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_AUS__c.field-meta.xml
<CustomField>
    <fullName>uwm_AUS__c</fullName>
    <label>AUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>