force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_AWCDate__c.field-meta.xml
<CustomField>
    <fullName>uwm_AWCDate__c</fullName>
    <label>AWC Date</label>
    <type>DateTime</type>
</CustomField>