force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_Borr1ConsentToEsign__c.field-meta.xml
<CustomField>
    <fullName>uwm_Borr1ConsentToEsign__c</fullName>
    <label>Borrower Consent To Esign</label>
    <type>DateTime</type>
</CustomField>