force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_Borr1LinkDelivered__c.field-meta.xml
<CustomField>
    <fullName>uwm_Borr1LinkDelivered__c</fullName>
    <label>Borrower Link Delivered</label>
    <type>DateTime</type>
</CustomField>