force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_Borr1SignedAndSubmitted__c.field-meta.xml
<CustomField>
    <fullName>uwm_Borr1SignedAndSubmitted__c</fullName>
    <label>Borrower Signed And Submitted</label>
    <type>DateTime</type>
</CustomField>