force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_Borr2SignedAndSubmitted__c.field-meta.xml
<CustomField>
    <fullName>uwm_Borr2SignedAndSubmitted__c</fullName>
    <label>Coborrower Signed and Submitted</label>
    <type>DateTime</type>
</CustomField>