force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_BorrowerEmail__c.field-meta.xml
<CustomField>
    <fullName>uwm_BorrowerEmail__c</fullName>
    <label>Borrower Email</label>
    <type>Email</type>
</CustomField>