force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_BorrowerFirstName__c.field-meta.xml
<CustomField>
    <fullName>uwm_BorrowerFirstName__c</fullName>
    <label>Borrower First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>