force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_BorrowerHomePhone__c.field-meta.xml
<CustomField>
    <fullName>uwm_BorrowerHomePhone__c</fullName>
    <label>Borrower Home Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>