force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_BorrowerIncome__c.field-meta.xml
<CustomField>
    <fullName>uwm_BorrowerIncome__c</fullName>
    <label>Borrower Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>