force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_BorrowerLastName__c.field-meta.xml
<CustomField>
    <fullName>uwm_BorrowerLastName__c</fullName>
    <label>Borrower Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>