force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_BrokerCompensation__c.field-meta.xml
<CustomField>
    <fullName>uwm_BrokerCompensation__c</fullName>
    <label>Broker Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>