force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_BrokerID__c.field-meta.xml
<CustomField>
    <fullName>uwm_BrokerID__c</fullName>
    <label>Broker ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>