force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_Buydown_Description__c.field-meta.xml
<CustomField>
    <fullName>uwm_Buydown_Description__c</fullName>
    <label>Buydown Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>