force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_CashToClose__c.field-meta.xml
<CustomField>
    <fullName>uwm_CashToClose__c</fullName>
    <label>Cash To Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>