force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_CashToCloseAvailable__c.field-meta.xml
<CustomField>
    <fullName>uwm_CashToCloseAvailable__c</fullName>
    <label>Cash To Close Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>