force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_CDSignedDate__c.field-meta.xml
<CustomField>
    <fullName>uwm_CDSignedDate__c</fullName>
    <label>CD Signed Date</label>
    <type>DateTime</type>
</CustomField>