force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_CDSignedFlag__c.field-meta.xml
<CustomField>
    <fullName>uwm_CDSignedFlag__c</fullName>
    <label>CDSignedFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>