force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_ClearToCloseDate__c.field-meta.xml
<CustomField>
    <fullName>uwm_ClearToCloseDate__c</fullName>
    <label>Clear To Close Date</label>
    <type>DateTime</type>
</CustomField>