force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_ClosingDate__c.field-meta.xml
<CustomField>
    <fullName>uwm_ClosingDate__c</fullName>
    <label>Closing Date</label>
    <type>DateTime</type>
</CustomField>