force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_ClosingDisclosureDate__c.field-meta.xml
<CustomField>
    <fullName>uwm_ClosingDisclosureDate__c</fullName>
    <label>Closing Disclosure Date</label>
    <type>Date</type>
</CustomField>