force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_CLTV__c.field-meta.xml
<CustomField>
    <fullName>uwm_CLTV__c</fullName>
    <label>CLTV</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>