force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_CoBorrowerIncome__c.field-meta.xml
<CustomField>
    <fullName>uwm_CoBorrowerIncome__c</fullName>
    <label>Co-Borrower Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>