force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_CompensationType__c.field-meta.xml
<CustomField>
    <fullName>uwm_CompensationType__c</fullName>
    <label>Compensation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>