force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_County__c.field-meta.xml
<CustomField>
    <fullName>uwm_County__c</fullName>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>