force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_DaysSinceSubmission__c.field-meta.xml
<CustomField>
    <fullName>uwm_DaysSinceSubmission__c</fullName>
    <label>Days Since Submission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>