force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_DisbursementDate__c.field-meta.xml
<CustomField>
    <fullName>uwm_DisbursementDate__c</fullName>
    <label>Disbursement Date</label>
    <type>Date</type>
</CustomField>