force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_DiscountPoints__c.field-meta.xml
<CustomField>
    <fullName>uwm_DiscountPoints__c</fullName>
    <label>Discount Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>