force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_DTIBackEnd__c.field-meta.xml
<CustomField>
    <fullName>uwm_DTIBackEnd__c</fullName>
    <label>DTI Back End</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>