force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_DTIFrontEnd__c.field-meta.xml
<CustomField>
    <fullName>uwm_DTIFrontEnd__c</fullName>
    <label>DTI Front End</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>