force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_EsignCompleteDate__c.field-meta.xml
<CustomField>
    <fullName>uwm_EsignCompleteDate__c</fullName>
    <label>Esign Complete Date</label>
    <type>Date</type>
</CustomField>