force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_EsignCompletedFlag__c.field-meta.xml
<CustomField>
    <fullName>uwm_EsignCompletedFlag__c</fullName>
    <label>Esign Completed Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>