force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_FederalReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>uwm_FederalReferenceNumber__c</fullName>
    <label>Federal Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>