force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_FHACaseNumber__c.field-meta.xml
<CustomField>
    <fullName>uwm_FHACaseNumber__c</fullName>
    <label>FHA Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>