force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_FHAUpfrontMortgageInsurancePremium__c.field-meta.xml
<CustomField>
    <fullName>uwm_FHAUpfrontMortgageInsurancePremium__c</fullName>
    <label>FHA Upfront Mortgage Insurance Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>