force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_FinalPrice__c.field-meta.xml
<CustomField>
    <fullName>uwm_FinalPrice__c</fullName>
    <label>Final Price</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>