force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_FirstPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>uwm_FirstPaymentDate__c</fullName>
    <label>First Payment Date</label>
    <type>DateTime</type>
</CustomField>