force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_FundedDate__c.field-meta.xml
<CustomField>
    <fullName>uwm_FundedDate__c</fullName>
    <label>Funded Date</label>
    <type>DateTime</type>
</CustomField>