force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_FundingFee__c.field-meta.xml
<CustomField>
    <fullName>uwm_FundingFee__c</fullName>
    <label>Funding Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>