force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_InitialClosingDisclosure__c.field-meta.xml
<CustomField>
    <fullName>uwm_InitialClosingDisclosure__c</fullName>
    <label>Initial Closing Disclosure</label>
    <type>DateTime</type>
</CustomField>