force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_InitialLoanEstimate__c.field-meta.xml
<CustomField>
    <fullName>uwm_InitialLoanEstimate__c</fullName>
    <label>Initial Loan Estimate</label>
    <type>DateTime</type>
</CustomField>