force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_InterestRate__c.field-meta.xml
<CustomField>
    <fullName>uwm_InterestRate__c</fullName>
    <label>Interest Rate</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>