force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_LoanAmount__c.field-meta.xml
<CustomField>
    <fullName>uwm_LoanAmount__c</fullName>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>