force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_LoanFICO__c.field-meta.xml
<CustomField>
    <fullName>uwm_LoanFICO__c</fullName>
    <label>Loan FICO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>