force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_LoanNumber__c.field-meta.xml
<CustomField>
    <fullName>uwm_LoanNumber__c</fullName>
    <externalId>true</externalId>
    <label>Loan Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>