force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_LoanProduct__c.field-meta.xml
<CustomField>
    <fullName>uwm_LoanProduct__c</fullName>
    <label>Loan Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>