force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_LoanProgram__c.field-meta.xml
<CustomField>
    <fullName>uwm_LoanProgram__c</fullName>
    <label>Loan Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>