force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_LoanPurpose__c.field-meta.xml
<CustomField>
    <fullName>uwm_LoanPurpose__c</fullName>
    <label>Loan Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>