force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_LoanStatus__c.field-meta.xml
<CustomField>
    <fullName>uwm_LoanStatus__c</fullName>
    <label>Loan Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>