force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_LoanTerm__c.field-meta.xml
<CustomField>
    <fullName>uwm_LoanTerm__c</fullName>
    <label>Loan Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>