force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_LoanType__c.field-meta.xml
<CustomField>
    <fullName>uwm_LoanType__c</fullName>
    <label>Loan Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>