force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_LockDate__c.field-meta.xml
<CustomField>
    <fullName>uwm_LockDate__c</fullName>
    <label>Lock Date</label>
    <type>DateTime</type>
</CustomField>