force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_LockExpiration__c.field-meta.xml
<CustomField>
    <fullName>uwm_LockExpiration__c</fullName>
    <label>Lock Expiration</label>
    <type>DateTime</type>
</CustomField>