force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_LockStatus__c.field-meta.xml
<CustomField>
    <fullName>uwm_LockStatus__c</fullName>
    <label>Lock Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>