force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_MIType__c.field-meta.xml
<CustomField>
    <fullName>uwm_MIType__c</fullName>
    <label>MI Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>