force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_MonthlyMortgageInsurance__c.field-meta.xml
<CustomField>
    <fullName>uwm_MonthlyMortgageInsurance__c</fullName>
    <label>Monthly Mortgage Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>