force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_NoteReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>uwm_NoteReceivedDate__c</fullName>
    <label>Note Received Date</label>
    <type>DateTime</type>
</CustomField>