force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_OccupancyType__c.field-meta.xml
<CustomField>
    <fullName>uwm_OccupancyType__c</fullName>
    <label>Occupancy Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>