force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_OriginationCharges__c.field-meta.xml
<CustomField>
    <fullName>uwm_OriginationCharges__c</fullName>
    <label>Origination Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>