force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_PITI__c.field-meta.xml
<CustomField>
    <fullName>uwm_PITI__c</fullName>
    <label>PITI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>