force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_PropertyType__c.field-meta.xml
<CustomField>
    <fullName>uwm_PropertyType__c</fullName>
    <label>Property Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>