force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_RefinancePurpose__c.field-meta.xml
<CustomField>
    <fullName>uwm_RefinancePurpose__c</fullName>
    <label>Refinance Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>