force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_SalesPrice__c.field-meta.xml
<CustomField>
    <fullName>uwm_SalesPrice__c</fullName>
    <label>Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>