force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_SecondaryBorrower1FullName__c.field-meta.xml
<CustomField>
    <fullName>uwm_SecondaryBorrower1FullName__c</fullName>
    <label>Secondary Borrower Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>