force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_SubjectPropertyAddress__c.field-meta.xml
<CustomField>
    <fullName>uwm_SubjectPropertyAddress__c</fullName>
    <label>Subject Property Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>