force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_SubjectPropertyCity__c.field-meta.xml
<CustomField>
    <fullName>uwm_SubjectPropertyCity__c</fullName>
    <label>Subject Property City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>