force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_SubjectPropertyState__c.field-meta.xml
<CustomField>
    <fullName>uwm_SubjectPropertyState__c</fullName>
    <label>Subject Property State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>