force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_SubjectPropertyZip__c.field-meta.xml
<CustomField>
    <fullName>uwm_SubjectPropertyZip__c</fullName>
    <label>Subject Property Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>