force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_SubmittedToUW__c.field-meta.xml
<CustomField>
    <fullName>uwm_SubmittedToUW__c</fullName>
    <label>Submitted To UW</label>
    <type>DateTime</type>
</CustomField>