force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_ToleranceCures__c.field-meta.xml
<CustomField>
    <fullName>uwm_ToleranceCures__c</fullName>
    <label>Tolerance Cures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>