force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_UWToCTC__c.field-meta.xml
<CustomField>
    <fullName>uwm_UWToCTC__c</fullName>
    <label>UW To CTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>