force-app/main/default/objects/UWM_Loan_Info__c/fields/uwm_UWTouches__c.field-meta.xml
<CustomField>
    <fullName>uwm_UWTouches__c</fullName>
    <label>UW Touches</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>