force-app/main/default/objects/UWM_Loan_Info__c/fields/uwmestclosingdate__c.field-meta.xml
<CustomField>
    <fullName>uwmestclosingdate__c</fullName>
    <label>Est. Closing Date</label>
    <type>Date</type>
</CustomField>