force-app/main/default/objects/UWM_Loan_Info__c/fields/VVOE_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>VVOE_Expiration_Date__c</fullName>
    <label>VVOE Expiration Date</label>
    <type>Date</type>
</CustomField>